mdapioutput/objects/Transformation_Relationship__mdt.object
<CustomObject>
    <label>Transformation Relationship</label>
    <pluralLabel>Transformation Relationships</pluralLabel>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <referenceTo>Transformation_Record__mdt</referenceTo>
        <relationshipLabel>Transformation Relationships</relationshipLabel>
        <relationshipName>Transformation_Relationships</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <referenceTo>Transformation_Record__mdt</referenceTo>
        <relationshipLabel>Transformation Relationships (To)</relationshipLabel>
        <relationshipName>Transformation_Relationships1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
</CustomObject>